# gglib

./: CMakeLists.txt  COPYING  README
src/: CMakeLists.txt  gg_array.c  gg_array.h  main.c
test/: CMakeLists.txt
unittest/: gg_array_test.cc  test_main.cc_
