SET(GGLIB_SRC gg_array.c)

# shared library
ADD_LIBRARY(gg SHARED ${GGLIB_SRC})

# static library
ADD_LIBRARY(gg_static STATIC ${GGLIB_SRC})
SET_TARGET_PROPERTIES(gg_static PROPERTIES OUTPUT_NAME "gg")
#SET_TARGET_PROPERTIES(gg PROPERTIES CLEAN_DIRECT_OUTPUT 1)
#SET_TARGET_PROPERTIES(gg_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
